Fixed NullPointerException in event update